force-app/main/default/objects/Shared_Asset__c/Shared_Asset__c.object-meta.xml
<CustomObject>
    <description>Co-owned asset such as car, flat, etc.</description>
    <label>Shared Asset</label>
    <pluralLabel>Shared Assets</pluralLabel>
    <nameField>
        <label>Shared Asset Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>

    <!-- Base Currency (optional, if not using SF multi-currency logic directly) -->
    <fields>
        <fullName>Base_Currency__c</fullName>
        <description>Base currency code for this asset (e.g. INR, USD).</description>
        <label>Base Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Total purchase cost of the asset.</description>
        <label>Total Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>Purchase date of the asset.</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Total_Equity_Contributed__c</fullName>
        <description>Total equity contributed across all participants.</description>
        <label>Total Equity Contributed</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>Total_Loan_Taken__c</fullName>
        <description>Total loan amount taken for this asset.</description>
        <label>Total Loan Taken</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>Outstanding_Loan__c</fullName>
        <description>Outstanding loan amount for this asset.</description>
        <label>Outstanding Loan</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>Total_Income__c</fullName>
        <description>Total income generated by this asset.</description>
        <label>Total Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>Total_Expenses__c</fullName>
        <description>Total expenses incurred for this asset.</description>
        <label>Total Expenses</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>Net_Cashflow__c</fullName>
        <description>Net cashflow for this asset.</description>
        <label>Net Cashflow</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the shared asset.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

</CustomObject>